src/core/Claroline/PluginBundle/Tests/stub/plugin/Valid/WithMigrations/ValidWithMigrations.php
<?php
namespace Valid\WithMigrations;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class ValidWithMigrations extends ClarolinePlugin
{
    
}