src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey_2/InvalidUnexpectedTranslationKey_2.php
<?php

namespace Invalid\UnexpectedTranslationKey_2;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey_2 extends ClarolinePlugin
{
    public function getNameTranslationKey()
    {
        return '';
    }
}